--- a/stylesheets/blogstylesheet.css
+++ b/stylesheets/blogstylesheet.css
@@ -11,6 +11,7 @@ text-align: left;
 
 }
 p{
+  text-align: left;
   margin-right: 3px;
   margin-left: 3px;
 }
@@ -21,4 +22,17 @@ footer{
 .overwrite {
   position: static;
   top: 8vw;
+}
+
+pre {
+  width:76%;
+  margin-left: 15%;
+  font-size: 1em;
+  -webkit-text-stroke: #66ff33;
+  text-align: left;
+  background: #262626;
+  color: #66ff33;
+}
+span {
+  color: #ff66ff;
 }
