Change body size

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -23,10 +23,10 @@ nav{
   border-top: solid;
 }
 body{
-  background: #ffffff;
+  background: #ffffe5;
   margin-top: 0;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin-left: 17%;
+  margin-right: 17%;
   margin-bottom: 0;
   border-right-style: inset;
   border-left-style: outset;
