--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,3 +1,11 @@
+@font-face{
+  font-family: "NordRegular";
+  src: url("nordregular.ttf");
+}
+@font-face{
+  font-family: "NordLight";
+  src: url("nordlight.ttf") format('tff')
+}
 html{
   background-image: url("../img/stars.jpg");
   background-size: cover;
@@ -93,12 +101,4 @@ footer{
   padding-left: 0;
   padding-right: 0;
 
-}
-@font-face{
-  font-family: "NordRegular";
-  src: url("nordregular.ttf");
-}
-@font-face{
-  font-family: "NordLight";
-  src: url("nordlight.ttf")
 }
