--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -11,6 +11,7 @@ html{
   background-size: cover;
   color:rgba(200,200,200,200);
   -webkit-text-stroke: 0.05em #000000;
+  -moz-text-shadow: 0.0em #000000;
   font-family: "NordRegular";
 }
 a {
