--- a/stylesheets/blogstylesheet.css
+++ b/stylesheets/blogstylesheet.css
@@ -1,4 +1,4 @@
-body{
+  body{
   min-height: 54vw;
   display: block;
 }
@@ -48,4 +48,10 @@ code{
 .title{
   font-size: 1.5em;
   font-family: "NordRegular"
+}
+.pbjsmall-font {
+  font-weight: 0.05em;
+}
+.py-codepad{
+  padding-left: 15px;
 }
