--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -7,12 +7,13 @@
   src: url("NordLight.woff")
 }
 html{
- /* background-image: url("../img/stars.jpg");*/
+  /*background-image: url("../img/baloons.jpg");*/
   background-size: cover;
-  color:rgba(200,200,200,200);
+  color: rgb(0,0,0) ,rgba(200,200,200,200);
   -webkit-text-stroke: 0.05em #000000;
   text-shadow: 0.05em #000000;
   font-family: "NordRegular";
+  font-size: small;
 }
 a {
   text-decoration: blink ;
@@ -40,7 +41,7 @@ nav{
 }
 body{
   background: #ffffe5;
-  opacity: 0.54;
+  opacity: 0.75;
   height: 100vh;
   margin-top: 0;
   margin-left: 17%;
@@ -56,10 +57,11 @@ article{
 }
 p{
   opacity: 2;
-  font-weight: 1em;
+  font-size: medium;
+  font-weight: 0.5em;
   text-align: center;
-  font-family: "NordLight";
-  color:rgb(0,0,0);
+  font-family: "Trebuchet MS", Helvetica, sans-serif;
+
 }
 
 
@@ -68,6 +70,7 @@ table{
   width: 100%;
   table-layout: initial;
   padding-left: 5%;
+  list-style-type: none;
 }
 tbody{
   border-bottom-width: 0.5em;
@@ -79,6 +82,7 @@ ul{
   margin-bottom: 0px;
 }
 footer{
+
   border-top: solid;
   font-size: 0.75em;
   padding-bottom: 1em;
