--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -8,7 +8,8 @@
 }
 html{
   /*background-image: url("../img/baloons.jpg");*/
-  background-size: cover;
+  /*background-size: cover;*/
+  background: #ffffe5;
   color: rgb(0,0,0) ,rgba(200,200,200,200);
   -webkit-text-stroke: 0.05em #000000;
   text-shadow: 0.05em #000000;
@@ -26,30 +27,33 @@ a:active{
   color: #00ccff;
 }
 a:hover{
-  color: #66ccff;
+  color: #ff99bb;
 }
 header{
+  height: 15vh;
   font-family: "NordRegular";
   opacity: 2;
   text-align: center;
   font-size: 3em;
-  padding-top: 5vh;
+  padding-top: 10vh;
 }
 nav{
   align-items: center;
-  border-top: solid;
+  border-bottom: solid;
+  border-radius: 25px;
+  border-color: #ffe6e6;
 }
 body{
-  background: #ffffe5;
+  /*background: #33ffff;*/
   opacity: 0.75;
   height: 100vh;
   margin-top: 0;
-  margin-left: 17%;
-  margin-right: 17%;
+  margin-left: 10%;
+  margin-right: 10%;
   margin-bottom: 0;
+  text-align: center;
 }
 article{
-  background: #ffffe5;
   margin-left: 10%;
   margin-right: 10%;
   text-align: center;
@@ -59,7 +63,7 @@ p{
   opacity: 2;
   font-size: medium;
   font-weight: 0.5em;
-  text-align: center;
+  text-align: left;
   font-family: "Trebuchet MS", Helvetica, sans-serif;
 
 }
@@ -106,7 +110,7 @@ footer a img:hover {
 }
 
 .f-alighn{
-
+  text-align: center;
   font-size: x-small;
   height: 1em;
   width: inherit;
@@ -114,10 +118,32 @@ footer a img:hover {
   padding-right: 0;
 
 }
+
 .subtext{
   font-size: 1.5em;
   width: 25%;
 }
 li{
   list-style-type: none;
+}
+.hexagon1{
+float: left;
+border-right: 30px solid #000000;
+border-top: 52px solid transparent;
+border-bottom: 52px solid transparent;
+}
+.hexagon2{
+float: left;
+width: 60px;
+height: 104px;
+background-color: #000000;
+}
+.hexagon3{
+float: left;
+border-left: 30px solid #000000;
+border-top: 52px solid transparent;
+border-bottom: 52px solid transparent;
+}
+
+
 }
